internal/gen/dsl/parser/dsl_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // DSL

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type DSLParser struct {
	*antlr.BaseParser
}

var dslParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func dslParserInit() {
	staticData := &dslParserStaticData
	staticData.literalNames = []string{
		"", "'type'", "'relations'", "'define'", "'as'", "':'", "'['", "']'",
		"','", "'#'", "':*'", "'self'", "'from'", "'or'", "'and'", "'but not'",
		"'('", "')'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "ID", "WS",
	}
	staticData.ruleNames = []string{
		"dsl", "typeDefinition", "relation", "typeRestriction", "relationReferences",
		"relationReference", "rewrite",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// DSLParserInit initializes any static state used to implement DSLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewDSLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func DSLParserInit() {
	staticData := &dslParserStaticData
	staticData.once.Do(dslParserInit)
}

// NewDSLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewDSLParser(input antlr.TokenStream) *DSLParser {
	DSLParserInit()
	this := new(DSLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &dslParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// DSLParser tokens.
const (
	DSLParserEOF   = antlr.TokenEOF
	DSLParserT__0  = 1
	DSLParserT__1  = 2
	DSLParserT__2  = 3
	DSLParserT__3  = 4
	DSLParserT__4  = 5
	DSLParserT__5  = 6
	DSLParserT__6  = 7
	DSLParserT__7  = 8
	DSLParserT__8  = 9
	DSLParserT__9  = 10
	DSLParserT__10 = 11
	DSLParserT__11 = 12
	DSLParserT__12 = 13
	DSLParserT__13 = 14
	DSLParserT__14 = 15
	DSLParserT__15 = 16
	DSLParserT__16 = 17
	DSLParserID    = 18
	DSLParserWS    = 19
)

// DSLParser rules.
const (
	DSLParserRULE_dsl                = 0
	DSLParserRULE_typeDefinition     = 1
	DSLParserRULE_relation           = 2
	DSLParserRULE_typeRestriction    = 3
	DSLParserRULE_relationReferences = 4
	DSLParserRULE_relationReference  = 5
	DSLParserRULE_rewrite            = 6
)

// IDslContext is an interface to support dynamic dispatch.
type IDslContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDslContext differentiates from other interfaces.
	IsDslContext()
}

type DslContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDslContext() *DslContext {
	var p = new(DslContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DSLParserRULE_dsl
	return p
}

func (*DslContext) IsDslContext() {}

func NewDslContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DslContext {
	var p = new(DslContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DSLParserRULE_dsl

	return p
}

func (s *DslContext) GetParser() antlr.Parser { return s.parser }

func (s *DslContext) EOF() antlr.TerminalNode {
	return s.GetToken(DSLParserEOF, 0)
}

func (s *DslContext) AllTypeDefinition() []ITypeDefinitionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypeDefinitionContext); ok {
			len++
		}
	}

	tst := make([]ITypeDefinitionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypeDefinitionContext); ok {
			tst[i] = t.(ITypeDefinitionContext)
			i++
		}
	}

	return tst
}

func (s *DslContext) TypeDefinition(i int) ITypeDefinitionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeDefinitionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeDefinitionContext)
}

func (s *DslContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DslContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DslContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.EnterDsl(s)
	}
}

func (s *DslContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.ExitDsl(s)
	}
}

func (p *DSLParser) Dsl() (localctx IDslContext) {
	this := p
	_ = this

	localctx = NewDslContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DSLParserRULE_dsl)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(15)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == DSLParserT__0 {
		{
			p.SetState(14)
			p.TypeDefinition()
		}

		p.SetState(17)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(19)
		p.Match(DSLParserEOF)
	}

	return localctx
}

// ITypeDefinitionContext is an interface to support dynamic dispatch.
type ITypeDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetObjectType returns the objectType token.
	GetObjectType() antlr.Token

	// SetObjectType sets the objectType token.
	SetObjectType(antlr.Token)

	// IsTypeDefinitionContext differentiates from other interfaces.
	IsTypeDefinitionContext()
}

type TypeDefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser     antlr.Parser
	objectType antlr.Token
}

func NewEmptyTypeDefinitionContext() *TypeDefinitionContext {
	var p = new(TypeDefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DSLParserRULE_typeDefinition
	return p
}

func (*TypeDefinitionContext) IsTypeDefinitionContext() {}

func NewTypeDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeDefinitionContext {
	var p = new(TypeDefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DSLParserRULE_typeDefinition

	return p
}

func (s *TypeDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeDefinitionContext) GetObjectType() antlr.Token { return s.objectType }

func (s *TypeDefinitionContext) SetObjectType(v antlr.Token) { s.objectType = v }

func (s *TypeDefinitionContext) ID() antlr.TerminalNode {
	return s.GetToken(DSLParserID, 0)
}

func (s *TypeDefinitionContext) AllRelation() []IRelationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRelationContext); ok {
			len++
		}
	}

	tst := make([]IRelationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRelationContext); ok {
			tst[i] = t.(IRelationContext)
			i++
		}
	}

	return tst
}

func (s *TypeDefinitionContext) Relation(i int) IRelationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationContext)
}

func (s *TypeDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeDefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeDefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.EnterTypeDefinition(s)
	}
}

func (s *TypeDefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.ExitTypeDefinition(s)
	}
}

func (p *DSLParser) TypeDefinition() (localctx ITypeDefinitionContext) {
	this := p
	_ = this

	localctx = NewTypeDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DSLParserRULE_typeDefinition)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(21)
		p.Match(DSLParserT__0)
	}
	{
		p.SetState(22)

		var _m = p.Match(DSLParserID)

		localctx.(*TypeDefinitionContext).objectType = _m
	}
	p.SetState(29)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DSLParserT__1 {
		{
			p.SetState(23)
			p.Match(DSLParserT__1)
		}
		p.SetState(25)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = _la == DSLParserT__2 {
			{
				p.SetState(24)
				p.Relation()
			}

			p.SetState(27)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}

	return localctx
}

// IRelationContext is an interface to support dynamic dispatch.
type IRelationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// IsRelationContext differentiates from other interfaces.
	IsRelationContext()
}

type RelationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	name   antlr.Token
}

func NewEmptyRelationContext() *RelationContext {
	var p = new(RelationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DSLParserRULE_relation
	return p
}

func (*RelationContext) IsRelationContext() {}

func NewRelationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RelationContext {
	var p = new(RelationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DSLParserRULE_relation

	return p
}

func (s *RelationContext) GetParser() antlr.Parser { return s.parser }

func (s *RelationContext) GetName() antlr.Token { return s.name }

func (s *RelationContext) SetName(v antlr.Token) { s.name = v }

func (s *RelationContext) Rewrite() IRewriteContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRewriteContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRewriteContext)
}

func (s *RelationContext) ID() antlr.TerminalNode {
	return s.GetToken(DSLParserID, 0)
}

func (s *RelationContext) TypeRestriction() ITypeRestrictionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeRestrictionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeRestrictionContext)
}

func (s *RelationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RelationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RelationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.EnterRelation(s)
	}
}

func (s *RelationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.ExitRelation(s)
	}
}

func (p *DSLParser) Relation() (localctx IRelationContext) {
	this := p
	_ = this

	localctx = NewRelationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DSLParserRULE_relation)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(31)
		p.Match(DSLParserT__2)
	}
	{
		p.SetState(32)

		var _m = p.Match(DSLParserID)

		localctx.(*RelationContext).name = _m
	}
	p.SetState(34)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DSLParserT__4 {
		{
			p.SetState(33)
			p.TypeRestriction()
		}

	}
	{
		p.SetState(36)
		p.Match(DSLParserT__3)
	}
	{
		p.SetState(37)
		p.rewrite(0)
	}

	return localctx
}

// ITypeRestrictionContext is an interface to support dynamic dispatch.
type ITypeRestrictionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTypeRestrictionContext differentiates from other interfaces.
	IsTypeRestrictionContext()
}

type TypeRestrictionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeRestrictionContext() *TypeRestrictionContext {
	var p = new(TypeRestrictionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DSLParserRULE_typeRestriction
	return p
}

func (*TypeRestrictionContext) IsTypeRestrictionContext() {}

func NewTypeRestrictionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeRestrictionContext {
	var p = new(TypeRestrictionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DSLParserRULE_typeRestriction

	return p
}

func (s *TypeRestrictionContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeRestrictionContext) RelationReferences() IRelationReferencesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationReferencesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationReferencesContext)
}

func (s *TypeRestrictionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeRestrictionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeRestrictionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.EnterTypeRestriction(s)
	}
}

func (s *TypeRestrictionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.ExitTypeRestriction(s)
	}
}

func (p *DSLParser) TypeRestriction() (localctx ITypeRestrictionContext) {
	this := p
	_ = this

	localctx = NewTypeRestrictionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DSLParserRULE_typeRestriction)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(39)
		p.Match(DSLParserT__4)
	}
	{
		p.SetState(40)
		p.Match(DSLParserT__5)
	}
	{
		p.SetState(41)
		p.RelationReferences()
	}
	{
		p.SetState(42)
		p.Match(DSLParserT__6)
	}

	return localctx
}

// IRelationReferencesContext is an interface to support dynamic dispatch.
type IRelationReferencesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRelationReferencesContext differentiates from other interfaces.
	IsRelationReferencesContext()
}

type RelationReferencesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRelationReferencesContext() *RelationReferencesContext {
	var p = new(RelationReferencesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DSLParserRULE_relationReferences
	return p
}

func (*RelationReferencesContext) IsRelationReferencesContext() {}

func NewRelationReferencesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RelationReferencesContext {
	var p = new(RelationReferencesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DSLParserRULE_relationReferences

	return p
}

func (s *RelationReferencesContext) GetParser() antlr.Parser { return s.parser }

func (s *RelationReferencesContext) RelationReference() IRelationReferenceContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationReferenceContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationReferenceContext)
}

func (s *RelationReferencesContext) AllRelationReferences() []IRelationReferencesContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRelationReferencesContext); ok {
			len++
		}
	}

	tst := make([]IRelationReferencesContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRelationReferencesContext); ok {
			tst[i] = t.(IRelationReferencesContext)
			i++
		}
	}

	return tst
}

func (s *RelationReferencesContext) RelationReferences(i int) IRelationReferencesContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationReferencesContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationReferencesContext)
}

func (s *RelationReferencesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RelationReferencesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RelationReferencesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.EnterRelationReferences(s)
	}
}

func (s *RelationReferencesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.ExitRelationReferences(s)
	}
}

func (p *DSLParser) RelationReferences() (localctx IRelationReferencesContext) {
	this := p
	_ = this

	localctx = NewRelationReferencesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, DSLParserRULE_relationReferences)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.RelationReference()
	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(45)
				p.Match(DSLParserT__7)
			}
			{
				p.SetState(46)
				p.RelationReferences()
			}

		}
		p.SetState(51)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
	}

	return localctx
}

// IRelationReferenceContext is an interface to support dynamic dispatch.
type IRelationReferenceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRelationReferenceContext differentiates from other interfaces.
	IsRelationReferenceContext()
}

type RelationReferenceContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRelationReferenceContext() *RelationReferenceContext {
	var p = new(RelationReferenceContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DSLParserRULE_relationReference
	return p
}

func (*RelationReferenceContext) IsRelationReferenceContext() {}

func NewRelationReferenceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RelationReferenceContext {
	var p = new(RelationReferenceContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DSLParserRULE_relationReference

	return p
}

func (s *RelationReferenceContext) GetParser() antlr.Parser { return s.parser }

func (s *RelationReferenceContext) CopyFrom(ctx *RelationReferenceContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *RelationReferenceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RelationReferenceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type RrTypeAndRelationContext struct {
	*RelationReferenceContext
	t antlr.Token
	r antlr.Token
}

func NewRrTypeAndRelationContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RrTypeAndRelationContext {
	var p = new(RrTypeAndRelationContext)

	p.RelationReferenceContext = NewEmptyRelationReferenceContext()
	p.parser = parser
	p.CopyFrom(ctx.(*RelationReferenceContext))

	return p
}

func (s *RrTypeAndRelationContext) GetT() antlr.Token { return s.t }

func (s *RrTypeAndRelationContext) GetR() antlr.Token { return s.r }

func (s *RrTypeAndRelationContext) SetT(v antlr.Token) { s.t = v }

func (s *RrTypeAndRelationContext) SetR(v antlr.Token) { s.r = v }

func (s *RrTypeAndRelationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RrTypeAndRelationContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(DSLParserID)
}

func (s *RrTypeAndRelationContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(DSLParserID, i)
}

func (s *RrTypeAndRelationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.EnterRrTypeAndRelation(s)
	}
}

func (s *RrTypeAndRelationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.ExitRrTypeAndRelation(s)
	}
}

type RrTypeAndWildcardContext struct {
	*RelationReferenceContext
	t antlr.Token
}

func NewRrTypeAndWildcardContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RrTypeAndWildcardContext {
	var p = new(RrTypeAndWildcardContext)

	p.RelationReferenceContext = NewEmptyRelationReferenceContext()
	p.parser = parser
	p.CopyFrom(ctx.(*RelationReferenceContext))

	return p
}

func (s *RrTypeAndWildcardContext) GetT() antlr.Token { return s.t }

func (s *RrTypeAndWildcardContext) SetT(v antlr.Token) { s.t = v }

func (s *RrTypeAndWildcardContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RrTypeAndWildcardContext) ID() antlr.TerminalNode {
	return s.GetToken(DSLParserID, 0)
}

func (s *RrTypeAndWildcardContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.EnterRrTypeAndWildcard(s)
	}
}

func (s *RrTypeAndWildcardContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.ExitRrTypeAndWildcard(s)
	}
}

type RrTypeContext struct {
	*RelationReferenceContext
	t antlr.Token
}

func NewRrTypeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RrTypeContext {
	var p = new(RrTypeContext)

	p.RelationReferenceContext = NewEmptyRelationReferenceContext()
	p.parser = parser
	p.CopyFrom(ctx.(*RelationReferenceContext))

	return p
}

func (s *RrTypeContext) GetT() antlr.Token { return s.t }

func (s *RrTypeContext) SetT(v antlr.Token) { s.t = v }

func (s *RrTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RrTypeContext) ID() antlr.TerminalNode {
	return s.GetToken(DSLParserID, 0)
}

func (s *RrTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.EnterRrType(s)
	}
}

func (s *RrTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DSLListener); ok {
		listenerT.ExitRrType(s)
	}
}

func (p *DSLParser) RelationReference() (localctx IRelationReferenceContext) {
	this := p
	_ = this

	localctx = NewRelationReferenceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, DSLParserRULE_relationReference)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext()) {
	case 1:
		localctx = NewRrTypeContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(52)

			var _m = p.Match(DSLParserID)

			localctx.(*RrTypeContext).t = _m
		}

	case 2:
		localctx = NewRrTypeAndRelationContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(53)

			var _m = p.Match(DSLParserID)

			localctx.(*RrTypeAndRelationContext).t = _m
		}
		{
			p.SetState(54)
			p.Match(DSLParserT__8)
		}
		{
			p.SetState(55)

			var _m = p.Match(DSLParserID)

			localctx.(*RrTypeAndRelationContext).r = _m
		}

	case 3:
		localctx = NewRrTypeAndWildcardContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(56)

			var _m = p.Match(DSLParserID)

			localctx.(*RrTypeAndWildcardContext).t = _m
		}
		{
			p.SetState(57)
			p.Match(DSLParserT__9)
		}

	}

	return localctx
}

// IRewriteContext is an interface to support dynamic dispatch.
type IRewriteContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRewriteContext differentiates from other interfaces.
	IsRewriteContext()
}

type RewriteContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRewriteContext() *RewriteContext {
	var p = new(RewriteContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DSLParserRULE_rewrite
	return p
}

func (*RewriteContext) IsRewriteContext() {}

func NewRewriteContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RewriteContext {
	var p = new(RewriteContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DSLParserRULE_rewrite

	return p
}

func (s *RewriteContext) GetParser() antlr.Parser { return s.parser }

func (s *RewriteContext) CopyFrom(ctx *RewriteContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *RewriteContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RewriteContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ComputedUsersetContext struct {
	*RewriteContext
	computedUserset antlr.Token
}

func NewComputedUsersetContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ComputedUsersetContext {
	var p = new(ComputedUsersetContext)

	p.RewriteContext = NewEmptyRewriteContext()
	p.parser = parser
	p.CopyFrom(ctx.(*RewriteContext))

	return p
}
